trabalhando na página sobre

--- a/index.html
+++ b/index.html
@@ -311,6 +311,20 @@
     </div>
     <!-- End Nossos Produtos -->
 
+    <!-- Banners dos  produtos da angola Telecom -->
+    <div class="publicidade-banners mt-30 mb-4 pb-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="mt-4 pb-4 pt-4 text-center text-uppercase bg-white"
+              style="background-image: url(assets/img/banner/banner-footer.jpg); background-size: cover;height: 250px;">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Banners -->
+
     <!-- Noticias -->
     <div class="noticias bg-white mt-4 pt-4 pb-4">
       <div class="container">
@@ -411,27 +425,6 @@
                       </div>
                     </div>
                   </div>
-                  <div class="row mt-4">
-                    <div class="col-lg-6">
-                      <div class="col-lg-12 text-center border p-4">
-                        <img src="assets/img/svg/equi-3.svg" alt="" class="col-lg-12 mb-2" style="width: 90px;" /><br />
-                        <span class="negrito">18.000 KZ <sup><s>21.000kz</s></sup></span>
-                        <h6 class="btn btn-primary bg-primario text-white roudend-0 mt-2">
-                          Telefone Fixo Móvel
-                        </h6>
-                      </div>
-                    </div>
-                    <div class="col-lg-6">
-                      <div class="col-lg-12 text-center border p-4">
-                        <img src="assets/img/svg/equi-2.svg" alt="" class="col-lg-12 mb-2" style="width: 90px;" /><br />
-                        <span class="negrito">18.000 KZ <sup><s>21.000kz</s></sup></span>
-                        <h6 class="btn btn-primary bg-primario text-white roudend-0 mt-2"
-                          style="border-radius: 0px !important;">
-                          Telefone Fixo Móvel
-                        </h6>
-                      </div>
-                    </div>
-                  </div>
                 </div>
               </div>
             </div>
@@ -441,6 +434,7 @@
       </div>
     </div>
     <!-- End Anuncions -->
+
     <div class="segmento pb-4 mt-4 mb-4 pt-4">
       <div class="container">
         <div class="row">
