--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -48,7 +48,7 @@
     <!-- End Site Mobile -->
 
     <!-- Menu Principal -->
-    <div class="border-bottom top-bar pt-3 pb-3 bg-gradiente-1" id="home-section" style="border: 0px !important;">
+    <div class="border-bottom top-bar pt-3 pb-3 bg-gradiente-1" id="home-section">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
@@ -121,7 +121,7 @@
             </nav>
           </div>
 
-          <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;">
+          <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3">
             <a href="#" class="site-menu-toggle js-menu-toggle text-black"><span class="icon-menu h3"></span></a>
           </div>
         </div>
@@ -129,7 +129,7 @@
     </header>
     <!-- End Menu Principal -->
 
-    <div class="sobre mt-4 mb-4" style="margin-top: 60px !important;">
+    <div class="sobre mt-4 mb-4 mt-150">
       <div class="container">
         <div class="row">
 
@@ -139,14 +139,13 @@
               <p class="mt-2">
                 Estamos em contacto com a sua empresa o mais possível
               </p>
-              <a href="#" class="btn bg-primary text-white bg-primario roudend-0" style="border-radius: 0px;">
+              <a href="#" class="btn bg-primary text-white bg-primario roudend-0">
                 Contacto <i class="fas fa-phone"></i>
               </a>
             </div>
 
 
-
-            <div class="p-4 mt-4 border shadow-sm bg-white border-0">
+            <div class="p-4 mt-4 border border-0">
               <p class="text-justify">
                 Temos uma gestão focada nas necessidades dos clientes, com
                 capacidade de atender projetos de ponta a ponta, em todas as
@@ -167,7 +166,7 @@
 
             <div class="mt-4">
               <h3 class="text-uppercase negrito">Angola Telecom</h3>
-              <hr style="border-top: 3px solid #0960aa" class="col-lg-2 float-left" />
+              <hr class="borda-top" class="col-lg-2 float-left" />
               <br>
               <p class="mt-4">
                 É uma Empresa Pública, criada pelo Decreto Nº 10/92 de 06 de
@@ -229,33 +228,70 @@
       </div>
     </div>
 
-    <div class="motivos mb-4 pt-4">
+    <div class="valores mb-4 pt-4">
       <div class="container">
-        <div class="row" style="margin-top: 10px">
+        <div class="row">
           <div class="col-lg-12">
-            <div class="mt-4 border" style="height: auto;">
+            <h3 class="text-uppercase negrito">Valores</h3>
+            <hr class="borda-top">
+          </div>
+        </div>
+        <div class="row mt-10 text-white">
+          <div class="col-lg-12">
+            <div class="mt-2">
               <div class="row">
-                <div class="col-lg-8 ">
-                  <div class="col-lg-12 bg-dark p-4" style="height: 200px;"></div>
+                <div class="col-lg-8">
+                  <div class="col-lg-12 valor-1 p-4 valor ">
+                    <div class=" mt-70">
+                      <a href="#" class="border-0 roudend-0 h5 text-white">Confiança</a> <br>
+                      <p>Encaramos os nossos clientes como nossos parceiros, estabelecendo uma relação de confiança nos
+                        objectivos de cada um.</p>
+                    </div>
+                  </div>
                 </div>
-                <div class="col-lg-4 ">
-                  <div class="col-lg-12 bg-dark p-4" style="height: 200px;"></div>
+                <div class="col-lg-4">
+                  <div class="col-lg-12 valor-1 p-4 valor">
+                    <div class=" mt-70">
+                      <a href="#" class="border-0 roudend-0 h5 text-white">Diferenciação</a> <br>
+                      <p>Encaramos os nossos clientes como nossos parceiros, estabelecendo uma relação.</p>
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="row mt-4">
                 <div class="col-lg-4 ">
-                  <div class="col-lg-12 bg-dark p-4" style="height: 200px;"></div>
+                  <div class="col-lg-12 valor-1 p-4 valor">
+                    <div class=" mt-70">
+                      <a href="#" class="border-0 roudend-0 h5 text-white">Excelência</a> <br>
+                      <p>Encaramos os nossos clientes como nossos parceiros, estabelecendo uma relação.</p>
+                    </div>
+                  </div>
                 </div>
                 <div class="col-lg-8 ">
-                  <div class="col-lg-12 bg-dark p-4" style="height: 200px;"></div>
+                  <div class="col-lg-12 valor-1 p-4 valor">
+                    <div class=" mt-70">
+                      <a href="#" class="border-0 roudend-0 h5 text-white">Integridade</a> <br>
+                      <p>Encaramos os nossos clientes como nossos parceiros, estabelecendo uma relação.</p>
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="row mt-4">
                 <div class="col-lg-8 ">
-                  <div class="col-lg-12 bg-dark p-4" style="height: 200px;"></div>
+                  <div class="col-lg-12 valor-1 p-4 valor">
+                    <div class=" mt-70">
+                      <a href="#" class="border-0 roudend-0 h5 text-white">Inovação</a> <br>
+                      <p>Encaramos os nossos clientes como nossos parceiros, estabelecendo uma relação.</p>
+                    </div>
+                  </div>
                 </div>
                 <div class="col-lg-4 ">
-                  <div class="col-lg-12 bg-dark p-4" style="height: 200px;"></div>
+                  <div class="col-lg-12 valor-1 p-4 valor">
+                    <div class=" mt-70">
+                      <a href="#" class="border-0 roudend-0 h5 text-white">Desenvolvimento</a> <br>
+                      <p>Encaramos os nossos clientes como nossos parceiros, estabelecendo uma relação.</p>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -264,35 +300,39 @@
       </div>
     </div>
 
-    <div class="estatistica bg-dark text-white pt-4 pb-4" style="padding-bottom: 70px !important;height: auto;">
+    <div class="estatistica-sobre bg-dark text-white pt-4 pb-4 pb-70">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mb-4">
-            <h3 class="text-uppercase negrito text-white mb-4">Estatistica Angola Telecom</h3>
-            <hr style="border-top: 3px solid #0960aa; margin-top: -10px;" class="col-lg-2 float-left mt--4" />
+            <h3 class="text-uppercase negrito text-white mb-4 text-center">Estatistica Angola Telecom</h3>
+            <hr class="borda-top-white mt--10" class="col-lg-4 text-center" style="float: none !important" />
           </div>
         </div>
         <div class="row mt-4">
           <div class="col-lg-3 ">
-            <div class="bg-primario circle text-center m-auto" style="height: 100px; width: 100px; border-radius: 50%;">
+            <div class="circle text-center m-auto"
+              style="border: 3px solid #fff !important;height: 100px; width: 100px; border-radius: 50%;">
               <h1 class="pt-4">10</h1>
             </div>
             <h4 class="text-center mt-4">Parceiros</h4>
           </div>
           <div class="col-lg-3">
-            <div class="bg-primario circle text-center m-auto" style="height: 100px; width: 100px; border-radius: 50%;">
+            <div class="circle text-center m-auto"
+              style="border: 3px solid #fff !important;height: 100px; width: 100px; border-radius: 50%;">
               <h1 class="pt-4">30</h1>
             </div>
             <h4 class="text-center mt-4">Lojas</h4>
           </div>
           <div class="col-lg-3">
-            <div class="bg-primario circle text-center m-auto" style="height: 100px; width: 100px; border-radius: 50%;">
+            <div class="circle text-center m-auto"
+              style="border: 3px solid #fff !important;height: 100px; width: 100px; border-radius: 50%;">
               <h1 class="pt-4">+40</h1>
             </div>
             <h4 class="text-center mt-4">Clientes</h4>
           </div>
           <div class="col-lg-3">
-            <div class="bg-primario circle text-center m-auto" style="height: 100px; width: 100px; border-radius: 50%;">
+            <div class="circle text-center m-auto"
+              style="border: 3px solid #fff !important;height: 100px; width: 100px; border-radius: 50%;">
               <h1 class="pt-4">20</h1>
             </div>
             <h4 class="text-center mt-4">Parceiros</h4>
@@ -374,23 +414,23 @@
   </div>
   <!-- .site-wrap -->
 
-  <script src="assets/js/jquery-3.3.1.min.js"></script>
-  <script src="assets/js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js"></script>
-  <script src="assets/js/jquery-ui.js"></script>
-  <script src="assets/js/popper.min.js"></script>
-  <script src="assets/js/bootstrap.min.js"></script>
-  <script src="assets/js/owl.carousel.min.js"></script>
-  <script src="assets/js/jquery.stellar.min.js"></script>
-  <script src="assets/js/jquery.countdown.min.js"></script>
-  <script src="assets/js/bootstrap-datepicker.min.js"></script>
-  <script src="assets/js/jquery.easing.1.3.js"></script>
-  <script src="assets/js/aos.js"></script>
-  <script src="assets/js/jquery.fancybox.min.js"></script>
-  <script src="assets/js/jquery.sticky.js"></script>
+  <script src="../assets/js/jquery-3.3.1.min.js"></script>
+  <script src="../assets/js/jquery-migrate-3.0.1.min.js"></script>
+  <script src="../https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js"></script>
+  <script src="../assets/js/jquery-ui.js"></script>
+  <script src="../assets/js/popper.min.js"></script>
+  <script src="../assets/js/bootstrap.min.js"></script>
+  <script src="../assets/js/owl.carousel.min.js"></script>
+  <script src="../assets/js/jquery.stellar.min.js"></script>
+  <script src="../assets/js/jquery.countdown.min.js"></script>
+  <script src="../assets/js/bootstrap-datepicker.min.js"></script>
+  <script src="../assets/js/jquery.easing.1.3.js"></script>
+  <script src="../assets/js/aos.js"></script>
+  <script src="../assets/js/jquery.fancybox.min.js"></script>
+  <script src="../assets/js/jquery.sticky.js"></script>
 
-  <script src="assets/js/typed.js"></script>
-  <script src="assets/js/demo.js"></script>
+  <script src="../assets/js/typed.js"></script>
+  <script src="../assets/js/demo.js"></script>
   <script>
     var typed = new Typed(".typed-words", {
       strings: ["Web Apps", " WordPress", " Mobile Apps"],
@@ -414,7 +454,7 @@
     });
   </script>
 
-  <script src="assets/js/main.js"></script>
+  <script src="../assets/js/main.js"></script>
 </body>
 
 </html>
