--- a/pages/telinforma.html
+++ b/pages/telinforma.html
@@ -308,7 +308,7 @@
         <div class="col-lg-12 border pt-4 pb-4">
           <div class="row">
             <div class="col-lg-4">
-              <h1>Aqui vai ter uma ilustração</h1>
+              <img src="../assets/img/svg/undraw_fill_forms_yltj.svg" style="width: 100%;" alt="">
             </div>
             <div class="col-lg-8">
               <form action="">
