--- a/index.html
+++ b/index.html
@@ -110,15 +110,15 @@
                 <li class="has-children">
                   <a href="#servicos-produtos" class="nav-link">Serviços e Produtos</a>
                   <ul class="dropdown">
-                    <li><a href="#">Serviços</a></li>
-                    <li><a href="#">Produtos</a></li>
+                    <li><a href="pages/servicos.html">Serviços</a></li>
+                    <li><a href="pages/produtos.html">Produtos</a></li>
                   </ul>
                 </li>
                 <li>
-                  <a href="#" class="nav-link">Tarifario</a>
+                  <a href="pages/tarifario.html" class="nav-link">Tarifario</a>
                 </li>
                 <li>
-                  <a href="#" class="nav-link">Contactos</a>
+                  <a href="pages/contactos.html" class="nav-link">Contactos</a>
                 </li>
               </ul>
             </nav>
