--- a/pages/lojas.html
+++ b/pages/lojas.html
@@ -89,7 +89,7 @@
           </div>
           <div class="col-12 col-md-10 d-none d-xl-block">
             <nav class="site-navigation position-relative text-right" role="navigation">
-              <ul class="site-menu text-uppercase main-menu js-clone-nav mr-auto d-none d-lg-block">
+              <ul class="site-menu main-menu text-uppercase js-clone-nav mr-auto d-none d-lg-block">
                 <li><a href="../index.html" class="nav-link">Home</a></li>
 
                 <li class="has-children">
@@ -107,21 +107,21 @@
                 <li class="has-children">
                   <a href="#servicos-produtos" class="nav-link">Serviços e Produtos</a>
                   <ul class="dropdown">
-                    <li><a href="#">Serviços</a></li>
-                    <li><a href="#">Produtos</a></li>
+                    <li><a href="servicos.html">Serviços</a></li>
+                    <li><a href="produtos.html">Produtos</a></li>
                   </ul>
                 </li>
                 <li>
-                  <a href="#" class="nav-link">Tarifario</a>
+                  <a href="tarifario.html" class="nav-link">Tarifario</a>
                 </li>
                 <li>
-                  <a href="#" class="nav-link">Contactos</a>
+                  <a href="contactos.html" class="nav-link">Contactos</a>
                 </li>
               </ul>
             </nav>
           </div>
 
-          <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3">
+          <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;">
             <a href="#" class="site-menu-toggle js-menu-toggle text-black"><span class="icon-menu h3"></span></a>
           </div>
         </div>
@@ -144,23 +144,23 @@
 
           <div class="col-lg-12 mt-4">
             <div class="bg-dark p-4 col-lg-12">
-              <form action="" method="post">
+              <form action="" method="post" class="mt-4">
                 <div class="row">
                   <div class="form-group col-lg-4">
-                    <input type="text" class="form-control roudend-0" placeholder="Pesquisa loja">
+                    <input type="text" class="form-control " placeholder="Pesquisa loja">
                   </div>
                   <div class="form-group col-lg-2">
-                    <select name="raio" id="" class="form-control roudend-0">
+                    <select name="raio" id="" class="form-control ">
                       <option value="raio">5KM</option>
                     </select>
                   </div>
                   <div class="form-group col-lg-2">
-                    <select name="raio" id="" class="form-control roudend-0">
+                    <select name="raio" id="" class="form-control ">
                       <option value="raio">5KM</option>
                     </select>
                   </div>
                   <div class="form-group col-lg-4">
-                    <select name="raio" id="" class="form-control roudend-0">
+                    <select name="raio" id="" class="form-control ">
                       <option value="raio">5KM</option>
                     </select>
                   </div>
@@ -169,8 +169,8 @@
             </div>
           </div>
 
-          <div class="col-lg-12 mt-2">
-            <div>
+          <div class="col-lg-12 mt-4">
+            <div class="mt-4">
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63080.28578597053!2d13.205468937890322!3d-8.83128172496379!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1a51f39bd428607b%3A0x1cafbf8158802a89!2sAngola%20Telecom!5e0!3m2!1spt-PT!2sao!4v1595418272337!5m2!1spt-PT!2sao"
                 width="100%" height="450" frameborder="0" style="border: 0;" allowfullscreen="" aria-hidden="false"
@@ -180,7 +180,6 @@
 
           <div class="col-lg-12 mt-4">
             <div class="row">
-
               <div class="col-lg-4 mt-4">
                 <div class=" bg-white border-0 shadow card-mk">
                   <img src="../assets/img/banner/v1-1.jpg" style="width: 100%; height: 200px;" alt="" />
@@ -387,7 +386,7 @@
                 left bottom,
                 from(#000000a6),
                 to(#000000a6)
-              ), url(../assets/img/banner/v1-1.jpg); background-size: cover; height: auto; background-position: center;">
+              ), url(../assets/img/banner/v1-3.jpg); background-size: cover; height: auto; background-position: center;">
               <div class="content-describe-modal text-white p-2" style="margin-top: 150px">
                 <h4>Contactar Loja</h4>
                 <h5 class="mt--4">Angola Telecom</h5>
@@ -414,7 +413,7 @@
             </div>
             <div class="col-lg-7 p-4">
               <form action="" method="post">
-                <div class="row m--2">
+                <div class="row mr-2">
                   <div class="form-group col-lg-12">
                     <select name="" id="" class="form-control">
                       <option value="">Assunto</option>
