--- a/pages/recrutamento.html
+++ b/pages/recrutamento.html
@@ -107,15 +107,15 @@
                 <li class="has-children">
                   <a href="#servicos-produtos" class="nav-link">Serviços e Produtos</a>
                   <ul class="dropdown">
-                    <li><a href="#">Serviços</a></li>
-                    <li><a href="#">Produtos</a></li>
+                    <li><a href="servicos.html">Serviços</a></li>
+                    <li><a href="produtos.html">Produtos</a></li>
                   </ul>
                 </li>
                 <li>
-                  <a href="#" class="nav-link">Tarifario</a>
+                  <a href="tarifario.html" class="nav-link">Tarifario</a>
                 </li>
                 <li>
-                  <a href="#" class="nav-link">Contactos</a>
+                  <a href="contactos.html" class="nav-link">Contactos</a>
                 </li>
               </ul>
             </nav>
@@ -129,59 +129,55 @@
     </header>
     <!-- End Menu Principal -->
 
-
-
     <div class="recrutamento mt-4 mb-4 mt-150">
-      <div class="container bg-white">
-        <div class="row p-4">
+      <div class="container">
+        <div class="row">
           <div class="col-lg-12">
-            <p class="p-4">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, excepturi! Dignissimos dicta id officiis,
-              distinctio eaque dolorum. Voluptate quod voluptas praesentium placeat hic distinctio rerum aperiam
-              reprehenderit assumenda, ad eos.
-            </p>
+            <div class="describe-recrutamento p-5 bg-white">
+              <p class="">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, excepturi! Dignissimos dicta id officiis,
+                distinctio eaque dolorum. Voluptate quod voluptas praesentium placeat hic distinctio rerum aperiam
+                reprehenderit assumenda, ad eos.
+              </p>
+            </div>
           </div>
-          <div class="col-lg-12" style="margin-top: -40px;">
-            <div class="row p-3">
-              <div class="col-lg-4 ">
-                <div class="col-lg-12 mt-4">
-                  <div class="row">
-                    <div class="col-lg-2">
-                      <h1>1</h1>
-                    </div>
-                    <div class="col-lg-10">
-                      <h6 class="negrito">Envia a sua candidatura</h6>
-                      <p class="text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae consectetur
-                        dolores optio excepturi.</p>
-                    </div>
+        </div>
+        <div class="row p-3">
+          <div class="col-lg-12 p-5 bg-white">
+            <div class="row">
+              <div class="col-lg-4">
+                <div class="row">
+                  <div class="col-lg-2">
+                    <h1>1</h1>
+                  </div>
+                  <div class="col-lg-10">
+                    <h6 class="negrito">Envia a sua candidatura</h6>
+                    <p class="text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae consectetur
+                      dolores optio excepturi.</p>
                   </div>
                 </div>
               </div>
               <div class="col-lg-4 ">
-                <div class="col-lg-12 mt-4">
-                  <div class="row">
-                    <div class="col-lg-2">
-                      <h1>2</h1>
-                    </div>
-                    <div class="col-lg-10">
-                      <h6 class="negrito">Analisamos a sua candidatura</h6>
-                      <p class="text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae consectetur
-                        dolores optio excepturi.</p>
-                    </div>
+                <div class="row">
+                  <div class="col-lg-2">
+                    <h1>2</h1>
+                  </div>
+                  <div class="col-lg-10">
+                    <h6 class="negrito">Analisamos a sua candidatura</h6>
+                    <p class="text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae consectetur
+                      dolores optio excepturi.</p>
                   </div>
                 </div>
               </div>
               <div class="col-lg-4 ">
-                <div class="col-lg-12 mt-4">
-                  <div class="row">
-                    <div class="col-lg-2">
-                      <h1>3</h1>
-                    </div>
-                    <div class="col-lg-10">
-                      <h6 class="negrito">Aguarde o nosso contacto</h6>
-                      <p class="text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae consectetur
-                        dolores optio excepturi.</p>
-                    </div>
+                <div class="row">
+                  <div class="col-lg-2">
+                    <h1>3</h1>
+                  </div>
+                  <div class="col-lg-10">
+                    <h6 class="negrito">Aguarde o nosso contacto</h6>
+                    <p class="text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae consectetur
+                      dolores optio excepturi.</p>
                   </div>
                 </div>
               </div>
@@ -189,61 +185,58 @@
           </div>
         </div>
 
-        <hr class="m-auto" style="margin-top: -30px;">
 
-        <div class="row p-4" style="margin-top: -30px;">
-          <div class="col-lg-12">
-            <h4 class="p-4">Recrutamento</h4>
-
+        <div class="row pb-3 pr-3 pl-3">
+          <div class="col-lg-12 mt--4 p-5 bg-white">
+            <h4 class="pl-4 pb-4">Recrutamento</h4>
             <form action="" class="pl-4">
               <div class="row">
                 <div class="form-group col-lg-4">
-                  <input type="text" class="form-control rounded-0" placeholder="Nome Completo">
+                  <input type="text" class="form-control " placeholder="Nome Completo">
                 </div>
                 <div class="form-group col-lg-4">
-                  <input type="email" class="form-control rounded-0" placeholder="email@gmail.com">
+                  <input type="email" class="form-control " placeholder="email@gmail.com">
                 </div>
                 <div class="form-group col-lg-4">
-                  <input type="number" class="form-control rounded-0" placeholder="Idade">
+                  <input type="number" class="form-control " placeholder="Idade">
                 </div>
                 <div class="form-group col-lg-4">
-                  <input type="tel" class="form-control rounded-0" placeholder="Telefone 1">
+                  <input type="tel" class="form-control " placeholder="Telefone 1">
                 </div>
                 <div class="form-group col-lg-4">
-                  <input type="tel" class="form-control rounded-0" placeholder="Telefone 2">
+                  <input type="tel" class="form-control " placeholder="Telefone 2">
                 </div>
                 <div class="form-group col-lg-4">
-                  <input type="tel" class="form-control rounded-0" placeholder="Experiência">
+                  <input type="tel" class="form-control " placeholder="Experiência">
                 </div>
                 <div class="form-group col-lg-4">
-                  <select name="" id="" class="form-control rounded-0">
+                  <select name="" id="" class="form-control ">
                     <option value="Formação acadêmica">Formação Acadêmica</option>
                   </select>
                 </div>
                 <div class="form-group col-lg-4">
-                  <select name="" id="" class="form-control rounded-0">
+                  <select name="" id="" class="form-control ">
                     <option value="Formação acadêmica">Onde Resides</option>
                   </select>
                 </div>
                 <div class="form-group col-lg-4">
-                  <input type="text" class="form-control rounded-0" placeholder="Lojas a que se candidata">
+                  <input type="text" class="form-control " placeholder="Lojas a que se candidata">
                 </div>
                 <div class="form-group col-lg-4 m-auto">
-                  <input type="file" class="form-control rounded-0" placeholder="Lojas a que se candidata">
+                  <input type="file" class="form-control " placeholder="Lojas a que se candidata">
                 </div>
               </div>
               <div class="row mt-4">
                 <div class="form-group col-lg-2 m-auto">
-                  <input type="submit" class="form-control rounded-0 bg-primario text-white" value="Candidatar-se">
+                  <input type="submit" class="form-control  bg-primario text-white" value="Candidatar-se">
                 </div>
               </div>
             </form>
           </div>
         </div>
-
       </div>
-    </div>
 
+    </div>
 
     <!-- Footer -->
     <footer class="site-footer">
