--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -107,21 +107,21 @@
                 <li class="has-children">
                   <a href="#servicos-produtos" class="nav-link">Serviços e Produtos</a>
                   <ul class="dropdown">
-                    <li><a href="#">Serviços</a></li>
-                    <li><a href="#">Produtos</a></li>
+                    <li><a href="servicos.html">Serviços</a></li>
+                    <li><a href="produtos.html">Produtos</a></li>
                   </ul>
                 </li>
                 <li>
-                  <a href="#" class="nav-link">Tarifario</a>
+                  <a href="tarifario.html" class="nav-link">Tarifario</a>
                 </li>
                 <li>
-                  <a href="#" class="nav-link">Contactos</a>
+                  <a href="contactos.html" class="nav-link">Contactos</a>
                 </li>
               </ul>
             </nav>
           </div>
 
-          <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3">
+          <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;">
             <a href="#" class="site-menu-toggle js-menu-toggle text-black"><span class="icon-menu h3"></span></a>
           </div>
         </div>
@@ -134,7 +134,7 @@
         <div class="row">
 
           <div class="col-lg-4">
-            <div class="p-4 bg-white shadow-sm fixed">
+            <div class="pl-4 pr-4 mt--4">
               <h5>Como podemos ajudar ?</h5>
               <p class="mt-2">
                 Estamos em contacto com a sua empresa o mais possível
@@ -145,7 +145,7 @@
             </div>
 
 
-            <div class="p-4 mt-4 border border-0">
+            <div class="p-4 mt-4">
               <p class="text-justify">
                 Temos uma gestão focada nas necessidades dos clientes, com
                 capacidade de atender projetos de ponta a ponta, em todas as
