--- a/pages/tarifario.html
+++ b/pages/tarifario.html
@@ -354,18 +354,7 @@
                 </div>
             </div>
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
+        <!-- End Meus tarifarios -->
 
         <!-- Footer -->
         <footer class=" site-footer">
