--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   <link rel="stylesheet" href="assets/css/jquery-ui.css" />
   <link rel="stylesheet" href="assets/css/owl.carousel.min.css" />
   <link rel="stylesheet" href="assets/css/owl.theme.default.min.css" />
-  <link rel="stylesheet" href="assets/css/owl.theme.default.min.css" />
 
   <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css" />
 
@@ -139,10 +138,10 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-12">
-                <div class="content-text-slider text-left">
+                <!-- <div class="content-text-slider text-left">
                   <h1>Já estamos disponível nas províncias</h1>
                   <h3>Angola Telecom</h3>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -153,24 +152,24 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-12">
-                <div class="content-text-slider text-left">
+                <!-- <div class="content-text-slider text-left">
                   <h1>Olá Mundo</h1>
-                  <p>Angola Telecom</p>
-                </div>
+                  <h3>Angola Telecom</h3>
+                </div> -->
               </div>
             </div>
           </div>
         </div>
       </div>
       <div>
-        <div class="testimonial slider-photo">
+        <div class="testimonial slider-photo-3">
           <div class="container">
             <div class="row">
               <div class="col-lg-12">
-                <div class="content-text-slider text-right">
+                <!-- <div class="content-text-slider text-right">
                   <h1>Angola Telecom</h1>
-                  <p>Angola Telecom</p>
-                </div>
+                  <h3>Angola Telecom</h3>
+                </div> -->
               </div>
             </div>
           </div>
@@ -186,7 +185,7 @@
           <div class="col-lg-4 mt-4 text-center">
             <div class="col-lg-12 p-4 card-mk shadow-sm bg-white">
               <div class="bg-primario mb-4 circle">
-                <img src="assets/img/svg/wi-fi (1).svg" class="mt-3" />
+                <img src="assets/img/svg/wi-fi.svg" class="mt-3" />
               </div>
               <h4 class="text-uppercase negrito">Internet</h4>
               <span>Serviços com qualidade</span>
@@ -204,7 +203,7 @@
           <div class="col-lg-4 text-center mt-120">
             <div class="col-lg-12 p-4 card-mk shadow-sm bg-white">
               <div class="bg-primario mb-4 circle">
-                <img src="assets/img/svg/roteador-wi-fi (1).svg" class="mt-3" alt="" />
+                <img src="assets/img/svg/roteador-wi-fi.svg" class="mt-3" alt="" />
               </div>
               <h4 class="text-uppercase negrito">Equipamentos</h4>
               <span>Serviços com qualidade</span>
@@ -257,7 +256,6 @@
           <div class="col-lg-12">
             <h3 class="text-uppercase negrito">Nossos Produtos</h3>
           </div>
-
           <div class="col-lg-4 mt-4">
             <div class="col-lg-12 produtos p-4 card-mk" style="
                   background-image: -webkit-gradient(
@@ -268,10 +266,8 @@
                       to(#00000071)
                     ),
                     url(assets/img/produtos/p1.jpg);
-                  background-size: 80%;
-             
                 ">
-              <span class="text-uppercase btn btn-primary border-0 text-white bg-primario roudend-0">Fale e
+              <span class="text-uppercase btn border-0 text-white bg-gradiente-1 roudend-0">Fale e
                 Navegue</span>
             </div>
           </div>
@@ -288,7 +284,7 @@
                   background-size: 100% 100%;
                   background-repeat: no-repeat;
                 ">
-              <span class="text-uppercase btn btn-primary border-0 text-white bg-primario roudend-0">Fale Mais</span>
+              <span class="text-uppercase btn border-0 text-white bg-gradiente-1 roudend-0">Fale Mais</span>
             </div>
           </div>
           <div class="col-lg-4 mt-4">
@@ -301,9 +297,8 @@
                       to(#00000071)
                     ),
                     url(assets/img/produtos/p3.jpg);
-                  background-size: 80%;
                 ">
-              <span class="text-uppercase btn btn-primary border-0 text-white bg-primario roudend-0">Fale Mais</span>
+              <span class="text-uppercase btn border-0 text-white bg-gradiente-1 roudend-0">Fale Mais</span>
             </div>
           </div>
         </div>
@@ -316,9 +311,11 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
+            <!-- Ver uma forma de adicionar imagens -->
             <div class="mt-4 pb-4 pt-4 text-center text-uppercase bg-white"
               style="background-image: url(assets/img/banner/banner-footer.jpg); background-size: cover;height: 250px;">
             </div>
+            <!-- Ver uma forma de adicionar imagens -->
           </div>
         </div>
       </div>
@@ -401,25 +398,25 @@
                 <div class="col-lg-6 border-right">
                   <h2 class="text-uppercase negrito">Equipamentos</h2>
                   <p>Já temos alguns equipamentos disponíveis para si</p>
-                  <a href="#" class="btn btn-primary text-white bg-primario border-0">Mais
+                  <a href="#" class="btn text-white bg-gradiente-1 bg-primario border-0">Mais
                     Equipamentos</a>
                 </div>
                 <div class="col-lg-6 text-right">
                   <div class="row">
                     <div class="col-lg-6">
                       <div class="col-lg-12 border p-4 text-center">
-                        <img src="assets/img/svg/equi-1.svg" alt="" class="col-lg-12 mb-2" style="width: 90px;" /><br />
+                        <img src="assets/img/svg/equi-1.svg" alt="" class="col-lg-12 mb-2" /><br />
                         <span class="negrito">18.000 KZ <sup><s>21.000kz</s></sup></span>
-                        <h6 class="btn btn-primary bg-primario text-white roudend-0 mt-2">
+                        <h6 class="btn btn-primary bg-gradiente-1 text-white roudend-0 mt-2">
                           Internet
                         </h6>
                       </div>
                     </div>
                     <div class="col-lg-6">
                       <div class="col-lg-12 text-center border p-4">
-                        <img src="assets/img/svg/equi-2.svg" alt="" class="col-lg-12 mb-2" style="width: 90px;" /><br />
+                        <img src="assets/img/svg/equi-2.svg" alt="" class="col-lg-12 mb-2" /><br />
                         <span class="negrito">18.000 KZ <sup><s>21.000kz</s></sup></span>
-                        <h6 class="btn btn-primary bg-primario text-white roudend-0 mt-2">
+                        <h6 class="btn btn-primary bg-gradiente-1 text-white roudend-0 mt-2">
                           Telefone Fixo Móvel
                         </h6>
                       </div>
@@ -435,6 +432,8 @@
     </div>
     <!-- End Anuncions -->
 
+
+    <!-- Nossos segmentos -->
     <div class="segmento pb-4 mt-4 mb-4 pt-4">
       <div class="container">
         <div class="row">
@@ -457,6 +456,8 @@
         </div>
       </div>
     </div>
+    <!-- End Segmentos -->
+
     <!-- Nossos Parceiros -->
     <div class="parceiros bg-white pb-4 pt-4 mb-4 pb-60">
       <div class="container">
@@ -510,15 +511,16 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
+            <!-- Ver uma mecanismo de adicionar fotos para publicidades -->
             <div class="mt-4 pb-4 pt-4 text-center text-uppercase bg-white"
               style="background-image: url(assets/img/banner/banner-footer.jpg); background-size: cover;height: 250px;">
             </div>
+            <!-- Ver uma mecanismo de adicionar fotos para publicidades -->
           </div>
         </div>
       </div>
     </div>
     <!-- Publicidade -->
-
 
     <!-- Footer -->
     <footer class="site-footer">
@@ -594,9 +596,9 @@
   </div>
   <!-- .site-wrap -->
 
+
   <script src="assets/js/jquery-3.3.1.min.js"></script>
   <script src="assets/js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js"></script>
   <script src="assets/js/jquery-ui.js"></script>
   <script src="assets/js/popper.min.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
@@ -622,15 +624,33 @@
       showCursor: true,
     });
     // Carousel
-    var owl = $(".owl-carousel");
-    owl.owlCarousel({
-      items: 1,
+    // var owl = $(".owl-carousel");
+    // owl.owlCarousel({
+    //   items: 2,
+    //   loop: true,
+    //   margin: 110,
+    //   autoplay: true,
+    //   autoplayTimeout: 2000,
+    //   autoplayHoverPause: true,
+    //   responsiveClass: true,
+    // });
+    $('.owl-carousel').owlCarousel({
       loop: true,
-      margin: 0,
+      margin: 10,
+      nav: true,
       autoplay: true,
-      autoplayTimeout: 2000,
-      autoplayHoverPause: true,
-      responsiveClass: true,
+      autoplayTimeout: 1000,
+      responsive: {
+        0: {
+          items: 3
+        },
+        600: {
+          items: 3
+        },
+        1000: {
+          items: 5
+        }
+      }
     });
   </script>
 
