--- a/pages/lojas.html
+++ b/pages/lojas.html
@@ -147,22 +147,19 @@
               <form action="" method="post" class="mt-4">
                 <div class="row">
                   <div class="form-group col-lg-4">
-                    <input type="text" class="form-control " placeholder="Pesquisa loja">
+                    <input type="text" class="form-control none" placeholder="Pesquisa loja">
                   </div>
                   <div class="form-group col-lg-2">
-                    <select name="raio" id="" class="form-control ">
+                    <select name="raio" class="form-control none">
                       <option value="raio">5KM</option>
                     </select>
                   </div>
-                  <div class="form-group col-lg-2">
-                    <select name="raio" id="" class="form-control ">
-                      <option value="raio">5KM</option>
-                    </select>
+                  <div class="form-group col-lg-3">
+                    <input type="text" class="form-control none">
                   </div>
-                  <div class="form-group col-lg-4">
-                    <select name="raio" id="" class="form-control ">
-                      <option value="raio">5KM</option>
-                    </select>
+                  <div class="form-group col-lg-3">
+                    <button class="btn bg-gradiente-1 form-control border-0 text-white">Pesquisar <i
+                        class="float-right fas fa-arrow-right mt-1"></i></button>
                   </div>
                 </div>
               </form>
