--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -133,6 +133,7 @@
       <div class="container">
         <div class="row">
 
+          <!-- Lateral Esquerto informações relacionados com a Angola Telecom -->
           <div class="col-lg-4">
             <div class="pl-4 pr-4 mt--4">
               <h5>Como podemos ajudar ?</h5>
@@ -143,8 +144,6 @@
                 Contacto <i class="fas fa-phone"></i>
               </a>
             </div>
-
-
             <div class="p-4 mt-4">
               <p class="text-justify">
                 Temos uma gestão focada nas necessidades dos clientes, com
@@ -154,20 +153,28 @@
                 também de outros segmentos da economia.
               </p>
             </div>
+
+            <div class="p-4">
+              <a href="#" class="text-dark" target="_blank">
+                <div class="text-center pt-4 pb-4 manual_angola_telecom">
+                  <p class="mt-3 negrito text-uppercase">Plano de Negócio</p>
+                </div>
+              </a>
+            </div>
           </div>
+          <!-- End Lateral Esquerto informações relacionados com a Angola Telecom -->
 
           <div class="col-lg-8 col-xl-8 col-md-8">
-            <div class="fundo-banner bg-dark pt-4 pb-4" style="
-                  height: 350px;
+            <!-- Banner do Fundo Sbore -->
+            <div class="banner-fundo-sobre bg-dark pt-4 pb-4" style="
                   background-image: url(../assets/img/fundo.jpg);
-                  background-size: cover;
                 ">
             </div>
+            <!-- End Banner do Fundo Sbore -->
 
+            <!-- Descrevendo Angola Telecom -->
             <div class="mt-4">
               <h3 class="text-uppercase negrito">Angola Telecom</h3>
-              <hr class="borda-top" class="col-lg-2 float-left" />
-              <br>
               <p class="mt-4">
                 É uma Empresa Pública, criada pelo Decreto Nº 10/92 de 06 de
                 Março como resultado da fusão das anteriores Empresas estatais
@@ -178,15 +185,16 @@
                 internacionais e a ENATEL às comunicações domésticas.
               </p>
             </div>
+            <!-- End Descrevendo Angola Telecom -->
 
+            <!-- Visão e Missão -->
             <div class="col-lg-12 mt-4">
               <div class="row">
                 <div class="col-lg-12">
                   <div class="row">
                     <div class="col-lg-2 ">
-                      <div class="icons-sobre text-center text-white bg-primario"
-                        style="width: 60px; height: 60px; border-radius: 50%;">
-                        <i class="fas fa-user mt-3" style="font-size: 25px;"></i>
+                      <div class="icons-sobre text-center text-white bg-primario">
+                        <i class="fas fa-user mt-3"></i>
                       </div>
                     </div>
                     <div class="col-lg-10">
@@ -205,9 +213,8 @@
                 <div class="col-lg-12 mt-4">
                   <div class="row">
                     <div class="col-lg-2">
-                      <div class="icons-sobre text-center text-white bg-primario"
-                        style="width: 60px; height: 60px; border-radius: 50%;">
-                        <i class="fas fa-user mt-3" style="font-size: 25px;"></i>
+                      <div class="icons-sobre text-center text-white bg-primario">
+                        <i class="fas fa-user mt-3"></i>
                       </div>
                     </div>
                     <div class="col-lg-10">
@@ -222,7 +229,7 @@
                 </div>
               </div>
             </div>
-
+            <!-- End Visão e Missão -->
           </div>
         </div>
       </div>
@@ -233,7 +240,6 @@
         <div class="row">
           <div class="col-lg-12">
             <h3 class="text-uppercase negrito">Valores</h3>
-            <hr class="borda-top">
           </div>
         </div>
         <div class="row mt-10 text-white">
@@ -303,36 +309,31 @@
     <div class="estatistica-sobre bg-dark text-white pt-4 pb-4 pb-70">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12 mb-4">
-            <h3 class="text-uppercase negrito text-white mb-4 text-center">Estatistica Angola Telecom</h3>
-            <hr class="borda-top-white mt--10" class="col-lg-4 text-center" style="float: none !important" />
+          <div class="col-lg-12 mb-4 mt-4">
+            <h3 class="text-uppercase negrito text-white mb-4 text-center">Estatística Angola Telecom</h3>
           </div>
         </div>
         <div class="row mt-4">
           <div class="col-lg-3 ">
-            <div class="circle text-center m-auto"
-              style="border: 3px solid #fff !important;height: 100px; width: 100px; border-radius: 50%;">
+            <div class="circle text-center m-auto">
               <h1 class="pt-4">10</h1>
             </div>
             <h4 class="text-center mt-4">Parceiros</h4>
           </div>
           <div class="col-lg-3">
-            <div class="circle text-center m-auto"
-              style="border: 3px solid #fff !important;height: 100px; width: 100px; border-radius: 50%;">
+            <div class="circle text-center m-auto">
               <h1 class="pt-4">30</h1>
             </div>
             <h4 class="text-center mt-4">Lojas</h4>
           </div>
           <div class="col-lg-3">
-            <div class="circle text-center m-auto"
-              style="border: 3px solid #fff !important;height: 100px; width: 100px; border-radius: 50%;">
+            <div class="circle text-center m-auto">
               <h1 class="pt-4">+40</h1>
             </div>
             <h4 class="text-center mt-4">Clientes</h4>
           </div>
           <div class="col-lg-3">
-            <div class="circle text-center m-auto"
-              style="border: 3px solid #fff !important;height: 100px; width: 100px; border-radius: 50%;">
+            <div class="circle text-center m-auto">
               <h1 class="pt-4">20</h1>
             </div>
             <h4 class="text-center mt-4">Parceiros</h4>
