--- a/pages/tarifario.html
+++ b/pages/tarifario.html
@@ -266,17 +266,17 @@
                 </div>
                 <!-- Pdf -->
                 <div class="row mt-4 negrito">
-                    <div class="col-lg-4 text-center">
+                    <div class="col-lg-4 text-center mt-3">
                         <a href="#" style="font-size: 20px !important; color: #7D7D7D">Ver Tarifários descontinuados <i
                                 class="fas fa-arrow-right"
                                 style="position: relative; top: 10px !important; font-size: 40px !important;"></i></a>
                     </div>
-                    <div class="col-lg-4 text-center">
+                    <div class="col-lg-4 text-center mt-3">
                         <a href="#" style="font-size: 20px !important; color: #7D7D7D">Ver Cobertura de Internet <i
                                 class="fas fa-arrow-right"
                                 style="position: relative; top: 10px !important; font-size: 40px !important;"></i></a>
                     </div>
-                    <div class="col-lg-4 text-center ">
+                    <div class="col-lg-4 text-center mt-3">
                         <a href="#" style="font-size: 20px !important; color: #7D7D7D;">Ver
                             Tarifários descontinuados <i class="fas fa-arrow-right"
                                 style="position: relative; top: 10px !important; font-size: 40px !important;"></i></a>
