--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -132,16 +132,116 @@
         </header>
         <!-- End Menu Principal -->
 
-        <div class="recrutamento mt-4 mb-4 mt-150">
-            <div class="container bg-white">
-                <div class="row p-4">
-                    <div class="col-lg-12">
-                        <h1>Olá Mundo</h1>
+        <!-- Banner Produtos -->
+        <div class="banner_produtos mt-4 p-4"
+            style="background-image:url(../assets/img/banner/v1-1.jpg); background-size: 100% ; height: 300px; margin-top: 98px !important">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 mt-100">
+                        <h2 class="text-white negrito text-uppercase">Produtos</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End Banner Produtos -->
+
+        <!-- Produtos -->
+        <div class="produtos-page mb-4 pb-4 mt-4">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 mt-50">
+                        <div class="col-lg-12 card bg-white border-0 card-mk" style="padding: 0px !important;">
+                            <img src="https://img.freepik.com/fotos-gratis/feliz-mulher-afro-americana-linda-jovem-ouvindo-musica-em-seu-telefone-movel-e-sorrindo-meio-urbano-primavera-ou-verao-roupa-casual_139317-3222.jpg?size=626&ext=jpg"
+                                alt="" style="height: 200px;" />
+                            <a class="bg-gradiente-1 text-white text-center p-0 negrito shadow mt-2 col-lg-6"
+                                href="#">Navegue Só</a>
+                            <div class="p-3 mt-2  text-dark">
+                                <h5 class="negrito">
+                                    Router MIFI - <span class="text-danger">15.000 kz</span>
+                                </h5>
+                                <p>-Mobile Router MIFI <br>- Wi-Fi <br>- Partilha até 8 utilizadores</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 mt-4">
+                        <div class="col-lg-12 card bg-white border-0 card-mk" style="padding: 0px !important;">
+                            <img src="https://img.freepik.com/fotos-gratis/feliz-mulher-afro-americana-linda-jovem-ouvindo-musica-em-seu-telefone-movel-e-sorrindo-meio-urbano-primavera-ou-verao-roupa-casual_139317-3222.jpg?size=626&ext=jpg"
+                                alt="" style="height: 200px;" />
+                            <a class="bg-gradiente-1 text-white text-center p-0 negrito shadow mt-2 col-lg-6"
+                                href="#">Fale e Navegue</a>
+                            <div class="p-3 mt-2  text-dark">
+                                <h5 class="negrito">
+                                    Indoor Max 216M1 - <span class="text-danger">1,500 kz</span>
+                                </h5>
+                                <p>- Uma porta <br>- Telefone <br>- Uma porta <br>- Internet <br>- Duas antenas externas
+                                    omnidirecionais
+                                    <br>- Wi-Fi <br>- Partilha até 8 utilizadores</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 mt-50">
+                        <div class="col-lg-12 card bg-white border-0 card-mk" style="padding: 0px !important;">
+                            <img src="https://img.freepik.com/fotos-gratis/feliz-mulher-afro-americana-linda-jovem-ouvindo-musica-em-seu-telefone-movel-e-sorrindo-meio-urbano-primavera-ou-verao-roupa-casual_139317-3222.jpg?size=626&ext=jpg"
+                                alt="" style="height: 200px;" />
+                            <a class="bg-gradiente-1 text-white text-center p-0 negrito shadow mt-2 col-lg-6"
+                                href="#">Fale e Navegue</a>
+                            <div class="p-3 mt-2  text-dark">
+                                <h5 class="negrito">
+                                    Indoor Max 218M2W - <span class="text-danger">5.000 kz</span>
+                                </h5>
+                                <p>- Duas portas para Voz <br>- Duas portas para Internet <br>- Wi-Fi <br>- Partilha até
+                                    8
+                                    utilizadores</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 mt-50">
+                        <div class="col-lg-12 card bg-white border-0 card-mk" style="padding: 0px !important;">
+                            <img src="https://img.freepik.com/fotos-gratis/feliz-mulher-afro-americana-linda-jovem-ouvindo-musica-em-seu-telefone-movel-e-sorrindo-meio-urbano-primavera-ou-verao-roupa-casual_139317-3222.jpg?size=626&ext=jpg"
+                                alt="" style="height: 200px;" />
+                            <a class="bg-gradiente-1 text-white text-center p-0 negrito shadow mt-2 col-lg-6"
+                                href="#">Fale e Navegue</a>
+                            <div class="p-3 mt-2  text-dark">
+                                <h5 class="negrito">
+                                    Outdoor Max - <span class="text-danger">15.000 kz</span>
+                                </h5>
+                                <p>-Mobile Router MIFI <br>- Wi-Fi <br>- Partilha até 8 utilizadores</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 mt-4">
+                        <div class="col-lg-12 card bg-white border-0 card-mk" style="padding: 0px !important;">
+                            <img src="https://img.freepik.com/fotos-gratis/feliz-mulher-afro-americana-linda-jovem-ouvindo-musica-em-seu-telefone-movel-e-sorrindo-meio-urbano-primavera-ou-verao-roupa-casual_139317-3222.jpg?size=626&ext=jpg"
+                                alt="" style="height: 200px;" />
+                            <a class="bg-gradiente-1 text-white text-center p-0 negrito shadow mt-2 col-lg-6"
+                                href="#">Fale Mais</a>
+                            <div class="p-3 mt-2  text-dark">
+                                <h5 class="negrito">
+                                    ETS 2055 - <span class="text-danger">1,500 kz</span>
+                                </h5>
+                                <p>- Telefone fixo móvel <br>- Internet <br>- SMS <br>- Rádio FM</p> <br>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 mt-50">
+                        <div class="col-lg-12 card bg-white border-0 card-mk" style="padding: 0px !important;">
+                            <img src="https://img.freepik.com/fotos-gratis/feliz-mulher-afro-americana-linda-jovem-ouvindo-musica-em-seu-telefone-movel-e-sorrindo-meio-urbano-primavera-ou-verao-roupa-casual_139317-3222.jpg?size=626&ext=jpg"
+                                alt="" style="height: 200px;" />
+                            <a class="bg-gradiente-1 text-white text-center p-0 negrito shadow mt-2 col-lg-6"
+                                href="#">Fale Mais</a>
+                            <div class="p-3 mt-2  text-dark">
+                                <h5 class="negrito">
+                                    ETS 1001 - <span class="text-danger">15.000 kz</span>
+                                </h5>
+                                <p>- Duas portas RJ-11 <br>- Uma porta para Fax <br>- 1 porta para voz - Internet</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
 
+        <!-- End -->
 
         <!-- Footer -->
         <footer class="site-footer">
