--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -32,6 +32,22 @@
     <!-- <link rel="icon" type="image/png" href="../assets/img/logo/logo.png" sizes="32x32">
     <link rel="icon" type="image/png" href="../assets/img/logo/logo.png" sizes="16x16"> -->
     <!-- End My Style -->
+
+
+    <style>
+        .servicos .nav-link {
+            color: #000;
+        }
+
+        .nav-link.active {
+            color: white !important;
+            background: -webkit-gradient(linear,
+                    right top,
+                    left bottom,
+                    from(#32dbc7),
+                    to(#0960aa)) !important;
+        }
+    </style>
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
@@ -132,15 +148,222 @@
         </header>
         <!-- End Menu Principal -->
 
-        <div class="recrutamento mt-4 mb-4 mt-150">
-            <div class="container bg-white">
-                <div class="row p-4">
-                    <div class="col-lg-12">
-                        <h1>Olá Mundo</h1>
+        <!-- Banner Serviços -->
+        <div class="banner_servicos mt-4 p-4">
+            <div class="container">
+                <div class="row">
+                    <!-- Serviços -->
+                    <div class="col-lg-12  mt--1">
+                        <div class="banner-servicos  mt-49 " style="height: 350px;">
+                            <div class="row">
+                                <div class="col-lg-8  bg-white"
+                                    style="background-image:url(https://img.freepik.com/fotos-gratis/feliz-mulher-afro-americana-linda-jovem-ouvindo-musica-em-seu-telefone-movel-e-sorrindo-meio-urbano-primavera-ou-verao-roupa-casual_139317-3222.jpg?size=626&ext=jpg); background-size: cover;">
+                                </div>
+                                <div class="col-lg-4 bg-gradiente-1" style="height: 350px !important;">
+                                    <div class="content-servicos-fundo text-white mt-100">
+                                        <h3 class="negrito">Catálogo dos Serviços</h3>
+                                        <h4 class="mt-4">A rede da Angola Telecom é uma das mais avançadas do mundo</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End Serviços -->
+                </div>
+            </div>
+        </div>
+        <!-- End Serviços -->
+
+        <!-- Sobre os Nossos serviços -->
+        <div class="sobre-servicos bg-white mb-4 pt-4 pb-4 text-center" style=" margin-top: -22px;">
+            <div class="container ">
+                <div class="row">
+                    <div class="col-lg-4 mt-4 ">
+                        <div class="">
+                            <img src="../assets/img/svg/icons8_administrator_male.svg" style="width: 30%;" alt="">
+                            <h4>Segmento Empresarial</h4>
+                            <p class="mt-1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque explicabo
+                                in beatae
+                                blanditiis minus distinctio laborum molestias</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 mt-4">
+                        <div class="">
+                            <img src="../assets/img/svg/icons8_home_page_1.svg" style="width: 30%;" alt="">
+                            <h4>Segmento Residencial</h4>
+                            <p class="mt-1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque explicabo
+                                in beatae
+                                blanditiis minus distinctio laborum molestias</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 mt-4">
+                        <div class="">
+                            <img src="../assets/img/svg/icons8_plus_2_math.svg" style="width: 30%;" alt="">
+                            <h4>Segmento a Grosso</h4>
+                            <p class="mt-1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque explicabo
+                                in beatae
+                                blanditiis minus distinctio laborum molestias</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+        <!-- End Serviços -->
+
+        <!-- Serviços -->
+        <div class="servicos mb-4">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 mt-4">
+                        <nav class="text-uppercase">
+                            <div class="nav flex-column bg-white " id="nav-tab" role="tablist">
+                                <a class="nav-item nav-link active" id="nav-todos" data-toggle="tab" href="#todos"
+                                    role="tab" aria-controls="nav-home" aria-selected="true"><i class="fas fa-home"></i>
+                                    Todos</a>
+
+                                <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab"
+                                    href="#nav-empresarial" role="tab" aria-controls="nav-profile"
+                                    aria-selected="false">Empresarial</a>
+
+
+                                <a class="nav-item nav-link" id="nav-residencial-tab" data-toggle="tab"
+                                    href="#nav-residencial" role="tab" aria-controls="nav-profile"
+                                    aria-selected="false">Residencial</a>
+
+                                <a class="nav-item nav-link" id="nav-grosso-tab" data-toggle="tab" href="#nav-grosso"
+                                    role="tab" aria-controls="nav-profile" aria-selected="false">A
+                                    grosso</a>
+                            </div>
+                        </nav>
+                    </div>
+                    <div class="col-lg-8">
+                        <div class="tab-content" id="nav-tabContent">
+                            <!-- Todos os serviços -->
+                            <div class="tab-pane fade show active" id="todos" role="tabpanel"
+                                aria-labelledby="nav-todos">
+                                <div class="row">
+                                    <div class="col-lg-6 mt-4">
+                                        <div class="col-lg-12 card bg-white border-0 card-mk"
+                                            style="padding: 0px !important;">
+                                            <img src="https://img.freepik.com/fotos-gratis/feliz-mulher-afro-americana-linda-jovem-ouvindo-musica-em-seu-telefone-movel-e-sorrindo-meio-urbano-primavera-ou-verao-roupa-casual_139317-3222.jpg?size=626&ext=jpg"
+                                                alt="" style="height: 200px;" />
+                                            <a class="bg-gradiente-1 text-white text-center p-0 negrito shadow mt-1 col-lg-8"
+                                                href="#">Segmento Empresarial</a>
+                                            <div class="p-4 mt-0 text-dark">
+                                                <h5 class="negrito">
+                                                    Circuitos Alugados
+                                                </h5>
+                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6 mt-4">
+                                        <div class="col-lg-12 card bg-white border-0 card-mk"
+                                            style="padding: 0px !important;">
+                                            <img src="https://img.freepik.com/fotos-gratis/feliz-mulher-afro-americana-linda-jovem-ouvindo-musica-em-seu-telefone-movel-e-sorrindo-meio-urbano-primavera-ou-verao-roupa-casual_139317-3222.jpg?size=626&ext=jpg"
+                                                alt="" style="height: 200px;" />
+                                            <a class="bg-primario text-white text-center p-0 negrito shadow mt-1 col-lg-8"
+                                                href="#">Segmento Residencial</a>
+                                            <div class="p-4 mt-0 text-dark">
+                                                <h5 class="negrito">
+                                                    Fala Mais
+                                                </h5>
+                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6 mt-4">
+                                        <div class="col-lg-12 card bg-white border-0 card-mk"
+                                            style="padding: 0px !important;">
+                                            <img src="https://img.freepik.com/fotos-gratis/feliz-mulher-afro-americana-linda-jovem-ouvindo-musica-em-seu-telefone-movel-e-sorrindo-meio-urbano-primavera-ou-verao-roupa-casual_139317-3222.jpg?size=626&ext=jpg"
+                                                alt="" style="height: 200px;" />
+                                            <a class="bg-gradiente-1 text-white text-center p-0 negrito shadow mt-1 col-lg-8"
+                                                href="#">Segmento Empresarial</a>
+                                            <div class="p-4 mt-0 text-dark">
+                                                <h5 class="negrito">
+                                                    Circuitos Alugados
+                                                </h5>
+                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6 mt-4">
+                                        <div class="col-lg-12 card bg-white border-0 card-mk"
+                                            style="padding: 0px !important;">
+                                            <img src="https://img.freepik.com/fotos-gratis/feliz-mulher-afro-americana-linda-jovem-ouvindo-musica-em-seu-telefone-movel-e-sorrindo-meio-urbano-primavera-ou-verao-roupa-casual_139317-3222.jpg?size=626&ext=jpg"
+                                                alt="" style="height: 200px;" />
+                                            <a class="bg-gradiente-1 text-white text-center p-0 negrito shadow mt-1 col-lg-8"
+                                                href="#">Segmento Empresarial</a>
+                                            <div class="p-4 mt-0 text-dark">
+                                                <h5 class="negrito">
+                                                    Circuitos Alugados
+                                                </h5>
+                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6 mt-4">
+                                        <div class="col-lg-12 card bg-white border-0 card-mk"
+                                            style="padding: 0px !important;">
+                                            <img src="https://img.freepik.com/fotos-gratis/feliz-mulher-afro-americana-linda-jovem-ouvindo-musica-em-seu-telefone-movel-e-sorrindo-meio-urbano-primavera-ou-verao-roupa-casual_139317-3222.jpg?size=626&ext=jpg"
+                                                alt="" style="height: 200px;" />
+                                            <a class="bg-gradiente-1 text-white text-center p-0 negrito shadow mt-1 col-lg-8"
+                                                href="#">Segmento Empresarial</a>
+                                            <div class="p-4 mt-0 text-dark">
+                                                <h5 class="negrito">
+                                                    Circuitos Alugados
+                                                </h5>
+                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6 mt-4">
+                                        <div class="col-lg-12 card bg-white border-0 card-mk"
+                                            style="padding: 0px !important;">
+                                            <img src="https://img.freepik.com/fotos-gratis/feliz-mulher-afro-americana-linda-jovem-ouvindo-musica-em-seu-telefone-movel-e-sorrindo-meio-urbano-primavera-ou-verao-roupa-casual_139317-3222.jpg?size=626&ext=jpg"
+                                                alt="" style="height: 200px;" />
+                                            <a class="bg-gradiente-1 text-white text-center p-0 negrito shadow mt-1 col-lg-8"
+                                                href="#">Segmento Empresarial</a>
+                                            <div class="p-4 mt-0 text-dark">
+                                                <h5 class="negrito">
+                                                    Circuitos Alugados
+                                                </h5>
+                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- End Todos os serviços -->
+
+                            <div class="tab-pane fade" id="nav-empresarial" role="tabpanel"
+                                aria-labelledby="nav-profile-tab">.12121221323..</div>
+
+                            <div class="tab-pane fade" id="nav-residencial" role="tabpanel"
+                                aria-labelledby="nav-residencial-tab">..44232.</div>
+
+                            <div class="tab-pane fade" id="nav-grosso" role="tabpanel" aria-labelledby="nav-grosso-tab">
+                                ..1111111111111111111111111111111144232.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End Serviços -->
+
+        <!-- Serviços Publicidades -->
+        <div class="servicos-publicidade mb-4 pb-4">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="mt-4 pb-4 pt-4 text-center text-uppercase bg-white"
+                            style="background-image: url(../assets/img/banner/banner-mk.png); background-size: cover;height: 250px;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End Serviços Publicidade -->
 
 
         <!-- Footer -->
